force-app/main/default/objects/Copyright_Image__c/Copyright_Image__c.object-meta.xml
<CustomObject>
    <label>Copyright Image</label>
    <nameField>
        <label>Copyright Image Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copyright Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>