force-app/main/default/objects/Copyright_Image__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Copyright Images</relationshipLabel>
    <relationshipName>Copyright_Images</relationshipName>
    <type>Lookup</type>
</CustomField>