force-app/main/default/objects/Copyright_Image__c/fields/Copyright_Holder__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Holder__c</fullName>
    <label>Copyright Holder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>