force-app/main/default/objects/Copyright_Image__c/fields/Copyright_Image_Created__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Image_Created__c</fullName>
    <label>Date Created/Modified</label>
    <type>Date</type>
</CustomField>