force-app/main/default/objects/Copyright_Image__c/fields/Copyright_Image_Modified__c.field-meta.xml
<CustomField>
    <fullName>Copyright_Image_Modified__c</fullName>
    <label>Date Modified</label>
    <type>Date</type>
</CustomField>