force-app/main/default/objects/Copyright_Image__c/fields/Image_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Image_File_Name__c</fullName>
    <label>Image File Name from User</label>
    <length>250</length>
    <type>Text</type>
</CustomField>