force-app/main/default/objects/Copyright_Image__c/fields/JOB_ID__c.field-meta.xml
<CustomField>
    <fullName>JOB_ID__c</fullName>
    <label>Job ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>