force-app/main/default/objects/Copyright_Image__c/fields/Listing_Key__c.field-meta.xml
<CustomField>
    <fullName>Listing_Key__c</fullName>
    <label>Listing Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>