force-app/main/default/objects/Copyright_Image__c/fields/Media_Key__c.field-meta.xml
<CustomField>
    <fullName>Media_Key__c</fullName>
    <label>Media Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>