force-app/main/default/objects/Copyright_Image__c/fields/MLID__c.field-meta.xml
<CustomField>
    <fullName>MLID__c</fullName>
    <label>MLID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>