force-app/main/default/objects/Copyright_Image__c/fields/Picscout_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>Picscout_Storage_URL__c</fullName>
    <label>Picscout Storage URL</label>
    <type>Url</type>
</CustomField>