force-app/main/default/objects/Copyright_Image__c/fields/PicScout_Validation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PicScout_Validation_Date_Time__c</fullName>
    <label>PicScout Validation Date Time</label>
    <type>DateTime</type>
</CustomField>