force-app/main/default/objects/Copyright_Image__c/fields/Record_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Record_Auto_Number__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Record Auto Number</label>
    <type>AutoNumber</type>
</CustomField>