force-app/main/default/objects/Copyright_Image__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>Copyright Images</relationshipLabel>
    <relationshipName>Copyright_Images</relationshipName>
    <type>Lookup</type>
</CustomField>