force-app/main/default/objects/Copyright_Image__c/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <label>Subscription Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>