force-app/main/default/objects/Copyright_Image__c/listViews/Copyright_Images.listView-meta.xml
<ListView>
    <fullName>Copyright_Images</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Listing_Key__c</columns>
    <columns>Media_Key__c</columns>
    <columns>MLID__c</columns>
    <columns>Copyright_Image_Created__c</columns>
    <columns>PicScout_Validation_Date_Time__c</columns>
    <columns>Subscription_ID__c</columns>
    <columns>Subscription_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Copyright Images</label>
</ListView>